# hris-genai-analysis

./: .gitignore  README.md
Case study_People and Org_ Associate/: CASE STUDY DETAILS.docx  CASE Study Details.md  employee_data_15000.csv
backend/: example.env  main.py  pyproject.toml  requirements.txt
backend/agent/: agent_constant.py  function_tools.py  langchain.py  langchain_providers.py  tools_constants.py
backend/app/: Homepage.py
backend/app/pages/: EDA analysis.py  HR AI agent.py
backend/core/: app_config.py  env.py
backend/data/sql/: custom_db.db  original_db.db
backend/eda/: clean_parse_data.py  eda_analysis.py  insert_data.py  runtime_queries.py
