[project]
name = "genai-sql-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "openai>=1.99.6",
    "pandas>=2.3.1",
    "streamlit>=1.48.0",
]

[tool.ruff.format]
quote-style = "single"
